obtener url y cambios de imagem

--- a/src/app/heroes/pages/layout-page/layout-page.component.html
+++ b/src/app/heroes/pages/layout-page/layout-page.component.html
@@ -23,7 +23,7 @@
         <span class="spacer"></span>
         <button mat-button>Logout</button>
     </mat-toolbar>
-    <div class="container">
+    <div class="container p-2">
         <router-outlet />
     </div>
 
