--- a/src/app/heroes/pages/search-page/search-page.component.html
+++ b/src/app/heroes/pages/search-page/search-page.component.html
@@ -1,1 +1,30 @@
-<p>search-page works!</p>
+<div class="flex flex-column p-2">
+    <h3>Buscador</h3>
+    <mat-form-field>
+        <mat-label>Buscador de héroes</mat-label>
+        <input type="text" matInput [formControl]="searchInput" (input)="searchHero()" [matAutocomplete]="auto">
+        <mat-autocomplete #auto="matAutocomplete" (optionSelected)="OnSelectOption($event)">
+            @for (hero of heroes; track $index) {
+            <mat-option [value]="hero">{{hero.superhero}}</mat-option>
+            }
+            @if (heroes.length ===0 && searchInput.value && searchInput.value.length > 0) {
+            <mat-option value="">No se encontró con el término {{searchInput.value}}</mat-option>
+            }
+        </mat-autocomplete>
+    </mat-form-field>
+    @if(selectedHero && searchInput.touched){
+    <heroes-hero-card [hero]="selectedHero"></heroes-hero-card>
+    }@else {
+    @if(!searchInput.touched && searchInput.pristine){
+    <div>
+        <p>Buscar un héroe</p>
+    </div>
+    }@else {
+    <div>
+        <p>No existe ese héroe</p>
+    </div>
+    }
+
+    }
+
+</div>
