--- a/src/app/heroes/pages/new-page/new-page.component.html
+++ b/src/app/heroes/pages/new-page/new-page.component.html
@@ -1,1 +1,69 @@
-<p>new-page works!</p>
+<h1>
+  {{ currentHero.id ? "Editar" : "Agregar" }} Héro
+  <small *ngIf="currentHero.superhero">{{ currentHero.superhero }}</small>
+</h1>
+<mat-divider class="mb-2"></mat-divider>
+<div class="grid">
+  <div class="col-12 sm:col-6">
+    <mat-card>
+      <mat-card-content>
+        <form [formGroup]="heroForm" class="grid" (ngSubmit)="onSubmit()">
+          <mat-form-field class="col-12 sm:col-6">
+            <mat-label>Super héro</mat-label>
+            <input formControlName="superhero" matInput type="text" required />
+          </mat-form-field>
+          <mat-form-field class="col-12 sm:col-6">
+            <mat-label>Alter Ego</mat-label>
+            <input formControlName="alter_ego" matInput type="text" required />
+          </mat-form-field>
+          <mat-form-field class="col-12">
+            <mat-label>Primera aparición</mat-label>
+            <input
+              formControlName="first_appearance"
+              matInput
+              type="text"
+              required
+            />
+          </mat-form-field>
+
+          <mat-form-field class="col-12">
+            <mat-label>Personajes</mat-label>
+            <input formControlName="characters" matInput type="text" required />
+          </mat-form-field>
+          <mat-form-field class="col-12">
+            <mat-label>Creador</mat-label>
+            <mat-select formControlName="publisher" required>
+              @for (publisher of publishers; track $index) {
+                <mat-option [value]="publisher.id">{{
+                  publisher.desc
+                }}</mat-option>
+              }
+            </mat-select>
+          </mat-form-field>
+          <mat-form-field class="col-12">
+            <mat-label>Alternative Image</mat-label>
+            <input formControlName="alt_image" matInput type="text" />
+          </mat-form-field>
+        </form>
+        <div class="flex justify-content-between">
+          <button *ngIf="currentHero.id" mat-flat-button color="warn" (click)="onDeleteHero()">
+            Borrar
+          </button>
+          <button mat-flat-button color="primary" (click)="onSubmit()">
+            <mat-icon>save</mat-icon>
+            Guardar
+          </button>
+        </div>
+      </mat-card-content>
+    </mat-card>
+  </div>
+  <div class="col-12 sm:col-6">
+    <mat-card>
+      <img
+        mat-card-image
+        [src]="currentHero | heroImage"
+        alt="imagen del héroe"
+      />
+    </mat-card>
+  </div>
+</div>
