--- a/src/app/heroes/pages/layout-page/layout-page.component.html
+++ b/src/app/heroes/pages/layout-page/layout-page.component.html
@@ -21,7 +21,8 @@
             <mat-icon>menu</mat-icon>
         </button>
         <span class="spacer"></span>
-        <button mat-button>Logout</button>
+        <span>{{user?.email}}</span>
+        <button mat-button  (click)="onLogOut()">Logout</button>
     </mat-toolbar>
     <div class="container p-2">
         <router-outlet />
